--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 <div id="layout-content">
 <table class="imgtable"><tbody><tr><td>
-<img src="./JingZHANG_files/jing.jpg" alt="" width="225px" height="271px">&nbsp;</td>
+<img src="./JingZHANG_files/zj.jpg" alt="" width="200px" height="271px">&nbsp;</td>
 <td align="left">
 <h1>Jing ZHANG</h1>
 <p>Ph.D. Student</p>
@@ -18,63 +18,28 @@ Department of Computer Science and Technology<br>
 Tsinghua University</p>
 <p>Email: zhangjing12 AT mails DOT tsinghua DOT edu DOT cn</p>
 <p>Address: FIT 1-308, Tsinghua University, Beijing</p>
-<p><a href="https://scholar.google.com/citations?user=T7Wa3GQAAAAJ&hl=en">Google Scholar Homepage</a></p>
 </td></tr></tbody></table>
 <h2>Short Bio</h2>
-<p>I am now a Ph.D. student (3rd year) at <a href="http://keg.cs.tsinghua.edu.cn/">Knowledge Engineering Group</a> in <a href="http://www.cs.tsinghua.edu.cn/">Department of Computer Science and Technology</a> of
+<p>I am now a Ph.D. student (2nd year) at <a href="http://keg.cs.tsinghua.edu.cn/">Knowledge Engineering Group</a> in <a href="http://www.cs.tsinghua.edu.cn/">Department of Computer Science and Technology</a> of
 <a href="http://www.tsinghua.edu.cn/eng/">Tsinghua University</a> under supervision of Professor <a                      href="http://keg.cs.tsinghua.edu.cn/jietang/">Jie Tang</a> and Professor <a href="http://www.tsinghua.edu.cn/publish/csen/4623/2010/20101224174815852865998/20101224174815852865998_.html">Juanzi Li</a>. 
 <p>
 I obtained my Bachelor degree in 2006 in Computer Science and Technology from Beijing JiaoTong University and Master degree in 2009 in Computer Science and Technology from Tsinghua University. Then I worked in IBM CDL until 2012. 
 	
-My current researh interest falls in area of social network, social influence and social representation.  
+My current researh interest falls in area of social network and heterogeneous information network analysis and modeling. 
 <p>For more detailed personal information, please refer to my <a href="./JingZHANG_files/CV.pdf">CV</a>.</p>
 
 
 <h2>System</h2>
-The core member of <a href="http://arnetminer.org"><b>ArnetMiner</b></a>, which is a free online service for academic social network analysis and mining. The system has collected information of over 39,124,022 researchers, 79,029,784 publication papers, and 330,236 conferences. The system is in operation on the internet since 2006 and has attracted nearly 6,000,000 independent IP accesses, with more than 300,000 page views per day. 
-
-
+The core member of <a href="http://arnetminer.org"><b>ArnetMiner</b></a>, which is a free online service for academic social network analysis and mining. The system has collected information of over 1,000,000 researchers, 3,000,000 publication papers, and 8,000 conferences. The system is in operation on the internet since 2006 and has attracted nearly 4,320,000 independent IP accesses, with more than 300,000 page views per day. 
 
 <h2>Conference Publications </h2>
 <ol>
 
-<LI><b>Jing Zhang</b>, Jie Tang, Cong Ma, Hanghang Tong, Yu Jing, and Juanzi Li. Panther: Fast Top-k Similarity Search in Large Networks. 
-In <a href="http://www.kdd.org/kdd2015/"> Proceedings of the 21th ACM SIGKDD International Conference on Knowledge Discovery and Data Mining</a>
-(<a href="http://www.kdd.org/kdd2015/">KDD'15</a>). pp. 1445-1454.(Full Paper, acceptance rate: 19%)
-[<a href="publications/panther-p1445-zhang.pdf">PDF</a>] 
-[<a href="publications/KDD15-panther-jingzhang-slides-final.pptx">Slides_PPT</a>] 
-[<a href="publications/KDD15-panther-jingzhang-slides-final.pdf">Slides_PDF</a>] 
-[<a href="publications/KDD15-panther-jingzhang-poster-final.pdf">Poster</a>] 
-[<a href="https://aminer.org/billboard/Panther">Data&Code</a>] 
-</LI>
-
-<LI>Yuxiao Dong, <b>Jing Zhang</b>, Jie Tang, Nitesh V. Chawla, Bai Wang. CoupledLP: Link Prediction in Coupled Networks. 
-In <a href="http://www.kdd.org/kdd2015/"> Proceedings of the 21th ACM SIGKDD International Conference on Knowledge Discovery and Data Mining</a>
-(<a href="http://www.kdd.org/kdd2015/">KDD'15</a>). pp. 199-208.(Full Paper, acceptance rate: 19%)
-[<a href="publications/coupledLP-dong.pdf">PDF</a>] 
-[<a href="publications/KDD15-slides-coupled-link-prediction-final.pptx">Slides_PPT</a>] 
-[<a href="publications/KDD15-slides-coupled-link-prediction-final.pdf">Slides_PDF</a>] 
-[<a href="publications/KDD15-poster-coupled-link-prediction-final.pdf">Poster</a>] 
-[<a href="https://aminer.org/billboard/CoupledLP">Data</a>] 
-</LI>
-
-
-<LI>Honglei Zhuang, <b>Jing Zhang</b>, George Brova, JieTang, Hasan Cam, XifengYan, and JiaweiHan.
-	Mining Query-Based Subnetwork Outliers in Heterogeneous Information Networks.
-In <a href="http://icdm2014.sfu.ca/home.html"> Proceedings of IEEE International Conference on Data Mining</a> 
-(<a href="http://icdm2014.sfu.ca/home.html">ICDM'14</a>). pp. 958-965.
-[<a href="publications/ICDM14-outlier-honglei.pdf">PDF</a>] 
-[<a href="publications/ICDM14-outlier-honglei.pptx">PPT</a>] 
-</LI>
-
-
 <LI><b>Jing Zhang</b>, Jie Tang, Honglei Zhuang, Cane Wing-Ki Leung, and Juanzi Li.
 	Role-aware Conformity Influence Modeling and Analysis in Social Networks.
 In <a href="http://www.aaai.org/Conferences/AAAI/aaai14.php">Proceedings of the 28th AAAI Conference on Artificial Intelligence</a>
-(<a href="http://www.aaai.org/Conferences/AAAI/aaai14.php">AAAI'14</a>). pp. 958-965.
-[<a href="publications/AAAI14-conformity-zhangjing.pdf">PDF</a>] 
-[<a href="publications/AAAI14-conformity-jingzhang-poster.jpg">Poster</a>] 
-[<a href="https://aminer.org/billboard/roleconformity">Data&Code</a>] 
+(<a href="http://www.aaai.org/Conferences/AAAI/aaai14.php">AAAI'14</a>). 
+[<a href="publications/AAAI14-Zhang-et-al-Role-aware-Conformity-Influence.pdf">PDF</a>] 
 </LI>
 
 <LI><b>Jing Zhang</b>, Biao Liu, Jie Tang, Ting Chen, and Juanzi Li. 
@@ -83,9 +48,9 @@ In
 <a href="http://ijcai13.org/">Proceedings of the 23rd International Joint Conference
 on Artificial Intelligence</a> (<a
 href="http://ijcai13.org/">IJCAI'13</a>). pp. 2761-2767.
-[<a href="publications/IJCAI13-influencelocality-zhangjing.pdf">PDF</a>] 
-[<a href="publications/IJCAI13-influencelocality-zhangjing-poster.pdf">Poster</a>]
-[<a href="https://aminer.org/billboard/Influencelocality">Data&Code</a>]
+[<a href="publications/IJCAI13-Zhang-et-al-social-influence-locality.pdf">PDF</a>] 
+[<a href="http://arnetminer.org/Influencelocality">Data&Code</a>]
+[<a href="publications/IJCAI13-poster-influence-locality.pdf">Poster</a>]
 </LI>
 
 <LI>Yang Yang, Jianfei Wang, Yutao Zhang, Wei Chen, <b>Jing Zhang</b>, Honglei Zhuang, Zhilin Yang, Bo Ma, Zhanpeng Fang, Sen Wu, Xiaoxiao Li, Debing Liu, and Jie Tang. 
@@ -117,10 +82,10 @@ Through Probabilistic Model. In <a href="http://apweb-waim09.suda.edu.cn/">Proce
 of 2009 Asia-Pacific Web Conference and Web-Age Information Management</a>
 (<a href="http://apweb-waim09.suda.edu.cn/">APWEB-WAIM'09</a>). pp. 162-173.</li>
 
-<li>Jie Tang, Jing Zhang, Limin Yao, Juanzi Li, Li Zhang, and Zhong Su. ArnetMiner:
+<li>Jie Tang, <b>Jing Zhang</b>, Limin Yao, Juanzi Li, Li Zhang, and Zhong Su. ArnetMiner:
 Extraction and Mining of Academic Social Networks. In <a
-href="http://www.sigkdd.org/kdd2008/"><i>Proceedings of the Fourteenth ACM
-SIGKDD International Conference on Knowledge Discovery and Data Mining</i></a>
+href="http://www.sigkdd.org/kdd2008/">Proceedings of the Fourteenth ACM
+SIGKDD International Conference on Knowledge Discovery and Data Mining</a>
 (<a href="http://www.sigkdd.org/kdd2008/">SIGKDD'08</a>). pp.990-998. [<a
 href="publications/KDD08-Tang-et-al-ArnetMiner.pdf">PDF</a>] [<a
 href="publications/KDD08-Tang-et-al-Arnetminer.ppt">Slides</a>]
@@ -128,12 +93,10 @@ href="publications/KDD08-Tang-et-al-Arnetminer.ppt">Slides</a>]
 [<a href="http://arnetminer.org/RESTful_service">API</a>]
 [<a href="http://arnetminer.org/citation">Citation Data</a>]
 [<a href="http://arnetminer.org/DBLP_Citation">DBLP Citation Data</a>]
-[<a href="http://keg.cs.tsinghua.edu.cn/jietang/software/ACT-code.zip">Author-Conference-Topic (ACT) Model (source code)</a>]
 [<a href="http://arnetminer.org/resources">More Data</a>]
 (<b>Top 3 cited papers among all KDD 2008's papers, </b>
 <a href="http://arnetminer.org/conference/kdd-2651.html?n=20&start=0">More...</a>)
 </li>
-
 
 <li>Jie Tang, Ruoming Jin, and <b>Jing Zhang</b>. A
 Topic Modeling Approach and its Integration into the Random Walk Framework for
@@ -195,39 +158,13 @@ href="publications/Zhang-et-al-Expert-Finding.pdf">PDF</a>]</li>
 
 <h2>Journal Publications </h2>
 <ol>
-
-<LI><b>Jing Zhang</b>, Zhanpeng Fang, Wei Chen, and Jie Tang.
-Diffusion of “Following” Links in Microblogging Networks. 
-<i> <a href="http://www.computer.org/portal/web/tkde">IEEE
-Transaction on Knowledge and Data Engineering</a></i>
-(<a href="http://www.computer.org/portal/web/tkde">TKDE</a>), 2015. 27(8):2093-2106. (<i>if</i> =1.815)
-[<a href="publications/linkdifussion-zhang.pdf">PDF</a>] 
-[<a href="publications/TKDE-slides-Linkdiffusion-final.pptx">Slides_PPT</a>] 
-[<a href="publications/TKDE-slides-Linkdiffusion-final.pdf">Slides_PDF</a>] 
-[<a href="https://aminer.org/billboard/followinf">Data&Code</a>] 
-</LI>
-
-
-<li>
-<b>Jing Zhang</b>, Jie Tang, Juanzi Li, Yang Liu, and Chunxiao Xing.
-Who Influenced You? Predicting Retweet via Social Influence Locality.
-<a href="http://tkdd.acm.org/">
-<i>ACM Transactions on Knowledge Discovery from Data</i></a> 
-(<a href="http://tkdd.acm.org/">TKDD</a>), 2015. 9(3).(<i>if</i> =1.147)
-[<a href="publications/whoinfluenceyouy-a25-zhang.pdf">PDF</a>] 
-[<a href="https://aminer.org/billboard/Influencelocality">Code&Data</a>]
-</li>
-
-
-
 <LI>Jie Tang, A.C.M. Fong, Bo Wang, and <b>Jing Zhang</b>. 
 A Unified Probabilistic Framework for Name Disambiguation in Digital Library. 
 <a href="http://www.computer.org/portal/web/tkde">IEEE
 Transaction on Knowledge and Data Engineering</a>
 (<a href="http://www.computer.org/portal/web/tkde">TKDE</a>)
-, 2012, Volume 24, Issue 6, Pages 975-987. (if=1.892)
+, 2012, Volume 24, Issue 6, Pages 975-987. (if=2.236)
 [<a href="publications/TKDE12-Tang-Name-Disambiguation.pdf">PDF</a>]
-[<a href="http://arnetminer.org/disambiguation">Data</a>]
 </li>	
 
 
@@ -279,24 +216,20 @@ Frontiers of Computer Science in China, 2008, Volume 2, Issue 1, pages 94-105.</
 
 <h2>Honors &amp; Awards</h2>
 <ul>
-<li><p>KDD Student Travel Award, 2015</p>
-</li>
-<li><p>Tsinghua Second-Class Scholarship, 2014</p>
-</li>
 <li><p>Tsinghua Alumni Scholarship, 2013</p>
 </li>
 <li><p>Excellent Master Thesis of Tsinghua University, 2009</p>
 </li>
 <li><p>IBM China Excellent Student Scholarship, 2008</p>
 </li>
-<li><p>Excellent Undergraduate of Beijing, 2006</p>
+<li><p>Excellent Graduate of Beijing, 2006</p>
 </li>
 <li><p>First-Class Excellent Undergraduate Student, 2003,2004,2005</p>
 </li>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Last updated: 2015-08-26.
+Last updated: 2014-05-05.
 
 
 <!-- Start of StatCounter Code for Default Guide -->
