--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 <div id="layout-content">
 <table class="imgtable"><tbody><tr><td>
-<img src="./JingZHANG_files/zj.jpg" alt="" width="200px" height="271px">&nbsp;</td>
+<img src="./JingZHANG_files/zj.png" alt="" width="200px" height="238px">&nbsp;</td>
 <td align="left">
 <h1>Jing ZHANG</h1>
 <p>Ph.D. Student</p>
