--- a/index.html
+++ b/index.html
@@ -12,15 +12,15 @@
 <img src="./JingZHANG_files/zj.png" alt="" width="200px" height="238px">&nbsp;</td>
 <td align="left">
 <h1>Jing ZHANG</h1>
-<p>Ph.D. Student</p>
-<p>Knowledge Engineering Lab (Group)<br>
+<p>Assistant Professor</p>
 Department of Computer Science and Technology<br>
-Tsinghua University</p>
-<p>Email: zhangjing12 AT mails DOT tsinghua DOT edu DOT cn</p>
-<p>Address: FIT 1-308, Tsinghua University, Beijing</p>
+Information School<bar>
+Renmin University of China</p>
+<p>Email: zhang-jing AT ruc DOT edu DOT cn</p>
+<p>Address: Room 427, Information Building, Renmin University of China, Beijing</p>
 </td></tr></tbody></table>
 <h2>Short Bio</h2>
-<p>I am now a Ph.D. student (2nd year) at <a href="http://keg.cs.tsinghua.edu.cn/">Knowledge Engineering Group</a> in <a href="http://www.cs.tsinghua.edu.cn/">Department of Computer Science and Technology</a> of
+<p>I am now an assistant professor at <a href="http://info.ruc.edu.cn/">Department of Computer Science and Technology</a>, <a href="http://www.ruc.edu.cn/">Renmin University of China</a>. 
 <a href="http://www.tsinghua.edu.cn/eng/">Tsinghua University</a> under supervision of Professor <a                      href="http://keg.cs.tsinghua.edu.cn/jietang/">Jie Tang</a> and Professor <a href="http://www.tsinghua.edu.cn/publish/csen/4623/2010/20101224174815852865998/20101224174815852865998_.html">Juanzi Li</a>. 
 <p>
 I obtained my Bachelor degree in 2006 in Computer Science and Technology from Beijing JiaoTong University and Master degree in 2009 in Computer Science and Technology from Tsinghua University. Then I worked in IBM CDL until 2012. 
@@ -229,7 +229,7 @@ Frontiers of Computer Science in China, 2008, Volume 2, Issue 1, pages 94-105.</
 </ul>
 <div id="footer">
 <div id="footer-text">
-Last updated: 2014-05-05.
+Last updated: 2018-02-22.
 
 
 <!-- Start of StatCounter Code for Default Guide -->
