--- a/index.html
+++ b/index.html
@@ -20,20 +20,49 @@ Renmin University of China</p>
 <p>Address: Room 427, Information Building, Renmin University of China, Beijing</p>
 </td></tr></tbody></table>
 <h2>Short Bio</h2>
-<p>I am now an assistant professor at <a href="http://info.ruc.edu.cn/">Department of Computer Science and Technology</a>, <a href="http://www.ruc.edu.cn/">Renmin University of China</a>. 
-<a href="http://www.tsinghua.edu.cn/eng/">Tsinghua University</a> under supervision of Professor <a                      href="http://keg.cs.tsinghua.edu.cn/jietang/">Jie Tang</a> and Professor <a href="http://www.tsinghua.edu.cn/publish/csen/4623/2010/20101224174815852865998/20101224174815852865998_.html">Juanzi Li</a>. 
-<p>
-I obtained my Bachelor degree in 2006 in Computer Science and Technology from Beijing JiaoTong University and Master degree in 2009 in Computer Science and Technology from Tsinghua University. Then I worked in IBM CDL until 2012. 
-	
-My current researh interest falls in area of social network and heterogeneous information network analysis and modeling. 
-<p>For more detailed personal information, please refer to my <a href="./JingZHANG_files/CV.pdf">CV</a>.</p>
+<p>I am now an assistant professor at <a href="http://info.ruc.edu.cn/">Computer Science Department</a>, <a href="http://www.ruc.edu.cn/">Renmin University of China</a>. 
+<p>Prior to that, I received my Ph.D. degree from Computer Science Department, <a href="http://www.tsinghua.edu.cn/eng/">Tsinghua University</a> under supervision of Professor <a href="http://keg.cs.tsinghua.edu.cn/jietang/">Jie Tang</a> and Professor <a href="http://www.tsinghua.edu.cn/publish/csen/4623/2010/20101224174815852865998/20101224174815852865998_.html">Juanzi Li</a>. 
 
+<p>	
+My current researh interest falls in area of social network mining, graph mining, text mining, deep learning, machine learning.
 
-<h2>System</h2>
-The core member of <a href="http://arnetminer.org"><b>ArnetMiner</b></a>, which is a free online service for academic social network analysis and mining. The system has collected information of over 1,000,000 researchers, 3,000,000 publication papers, and 8,000 conferences. The system is in operation on the internet since 2006 and has attracted nearly 4,320,000 independent IP accesses, with more than 300,000 page views per day. 
 
 <h2>Conference Publications </h2>
 <ol>
+
+<LI><b>Jing Zhang</b>, Jie Tang, Yuanyi Zhong, Yuchen Mo, Juanzi Li, Guojie Song, Wendy Hall, and Jimeng Sun. StructInf: Mining Structural Influence from Social Streams.
+In <a href="http://www.aaai.org/Conferences/AAAI/aaai17.php">Proceedings of the 31st AAAI Conference on Artificial Intelligence</a>
+(<a href="http://www.aaai.org/Conferences/AAAI/aaai17.php">AAAI'17</a>). 
+[<a href="publications/AAAI17-Zhang-et-al-structural-influence.pdf">PDF</a>]
+[<a href="publications/AAAI17-poster-Zhang-et-al-structinf.pdf">Poster</a>]
+</LI>
+
+
+
+<LI>Xiaotao Gu, Hong Yang, Jie Tang, and <b>Jing Zhang</b>. Web User Profiling using Data Redundancy.
+In <a href="http://asonam.im.nuk.edu.tw/">Proceedings of the 2016 International Conference on Social Networks Analysis and Mining</a>
+(<a href="http://asonam.cpsc.ucalgary.ca/2016/">ASONAM'16</a>). 
+[<a href="publications/ASONAM16-Gu-et-al-web-user-profiling.pdf">PDF</a>] 
+</LI>
+
+
+<LI><b>Jing Zhang</b>, Jie Tang, Cong Ma, Hanghang Tong, Yu Jing, and Juanzi Li. Panther: Fast Top-k Similarity Search on Large Networks.
+In <a href="http://kdd.org/kdd2015/">Proceedings of the Twenty-First ACM SIGKDD International Conference on Knowledge Discovery and Data Mining</a>
+(<a href="http://kdd.org/kdd2015/">KDD'15</a>). 
+[<a href="publications/kdd15-Zhang-et-al-network-similarity.pdf">PDF</a>] 
+[<a href="publications/KDD15-slides-Zhang-et-al-COSNET-network-integration.pdf">Slides_PDF</a>] 
+[<a href="publications/KDD15-slides-Zhang-et-al-Panther-network-similarity.pptx">Slides_PPT</a>]
+[<a href="publications/KDD15-poster-Zhang-et-al-COSNET-network-integration.pdf">Poster</a>]
+[<a href="https://aminer.org/panther">Code&Data</a>]
+</LI>
+
+
+<LI>Yuxiao Dong, <b>Jing Zhang</b>, Jie Tang, Nitesh V. Chawla, and Bai Wang. CoupledLP: Link Prediction in Coupled Networks.
+In <a href="http://kdd.org/kdd2015/">Proceedings of the Twenty-First ACM SIGKDD International Conference on Knowledge Discovery and Data Mining</a>
+(<a href="http://kdd.org/kdd2015/">KDD'15</a>). 
+[<a href="publications/kdd15-Dong-et-al-link-prediction-in-coupled-networks.pdf">PDF</a>] 
+</LI>
+
 
 <LI><b>Jing Zhang</b>, Jie Tang, Honglei Zhuang, Cane Wing-Ki Leung, and Juanzi Li.
 	Role-aware Conformity Influence Modeling and Analysis in Social Networks.
@@ -158,6 +187,41 @@ href="publications/Zhang-et-al-Expert-Finding.pdf">PDF</a>]</li>
 
 <h2>Journal Publications </h2>
 <ol>
+
+<LI><b>Jing Zhang</b>, Jie Tang, Cong Ma, Hanghang Tong, Yu Jing, Juanzi Li, Walter Luyten, and Marie-Francine Moens. 
+Fast and Flexible Top-k Similarity Search on Large Networks.
+<a href="https://tois.acm.org/">
+ACM Transactions on Information Systems</a>
+(<a href="https://tois.acm.org/">TOIS</a>)
+, 2017, Volume 36, Issue 2. (if =1.3) 
+[<a href="publications/TOIS17-Zhang-et-al-Fast-Top-K-Similarity-Search.pdf">PDF</a>]
+</li>	
+
+
+<LI><b>Jing Zhang</b>, Zhanpeng Fang, Wei Chen, and Jie Tang. 
+Diffusion of "Following" Links in Microblogging Networks.
+<a href="http://www.computer.org/portal/web/tkde">
+IEEE Transaction on Knowledge and Data Engineering</a>
+(<a href="http://www.computer.org/portal/web/tkde">TKDE</a>)
+, 2015. 27(8):2093-2106. (if =1.815) 
+[<a href="publications/TKDE15-Zhang-et-al-influence-diffusion-of-following.pdf">PDF</a>]
+[<a href="publications/TKDE15-slides-Zhang-et-al-influence-diffusion-of-following.pdf">Slides_PDF</a>]
+[<a href="publications/TKDE15-slides-Zhang-et-al-influence-diffusion-of-following.pptx">Slides_PPT</a>]
+</li>	
+
+
+
+<LI><b>Jing Zhang</b>, Jie Tang, Juanzi Li, Yang Liu, and Chunxiao Xing. 
+Who Influenced You? Predicting Retweet via Social Influence Locality. 
+<a href="http://tkdd.acm.org/">
+ACM Transactions on Knowledge Discovery from Data</a>
+(<a href="http://tkdd.acm.org/">TKDD</a>)
+, 2015. 27(8):2093-2106. (if=1.419)
+[<a href="publications/TKDD15-Zhang-Tang-retweet-influence-locality.pdf">PDF</a>]
+[<a href="https://aminer.org/influencelocality">Code&Data</a>]
+</li>	
+
+
 <LI>Jie Tang, A.C.M. Fong, Bo Wang, and <b>Jing Zhang</b>. 
 A Unified Probabilistic Framework for Name Disambiguation in Digital Library. 
 <a href="http://www.computer.org/portal/web/tkde">IEEE
@@ -214,8 +278,13 @@ Frontiers of Computer Science in China, 2008, Volume 2, Issue 1, pages 94-105.</
 </li>
 </ul>
 
+
 <h2>Honors &amp; Awards</h2>
 <ul>
+<li><p>Excellent Graduate of Beijing City with Ph.D. degree, 2016</p>
+</li>
+<li><p>National Scholarship, 2015</p>
+</li>
 <li><p>Tsinghua Alumni Scholarship, 2013</p>
 </li>
 <li><p>Excellent Master Thesis of Tsinghua University, 2009</p>
