--- a/index.html
+++ b/index.html
@@ -268,15 +268,15 @@ Frontiers of Computer Science in China, 2008, Volume 2, Issue 1, pages 94-105.</
 	
 </ol>
 
+
 <h2>Research Experience</h2>
 <ul>
-<li><p>Visiting student in Department of Computer Science, University of Illinois at Urbana-Champaign, advised by Professor <a href="http://www.cs.uiuc.edu/~hanj/">Jiawei Han</a>. <i>Jan. 2014 - May 2014</i></p>
+<li><p>Reviewer: TKDE, TOIS, TKDD, DMKD.</p>
 </li>
-<li><p>Visiting student in Department of Computer Science and Engineering, Hong Kong University of Science and Technology, advised by Professor <a href="https://www.cse.ust.hk/~luo/">Qiong Luo</a>. <i>May 2008 - Jul. 2008</i></p>
-</li>
-<li><p>Research Intern in Information Analysis and Search Group, IBM CRL. <i>Apr. 2007 - Jan. 2008</i></p>
+<li><p>PC member:ICDM2014,ASONAM2014,ICWSM2015,IJCAI2016,ASONAM2016,ICWSM2016,CIKM2016</p>
 </li>
 </ul>
+
 
 
 <h2>Honors &amp; Awards</h2>
