--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ In <a href="http://kdd.org/kdd2015/">Proceedings of the Twenty-First ACM SIGKDD 
 [<a href="publications/kdd15-Zhang-et-al-network-similarity.pdf">PDF</a>] 
 [<a href="publications/KDD15-slides-Zhang-et-al-Panther-network-similarity.pdf">Slides_PDF</a>] 
 [<a href="publications/KDD15-slides-Zhang-et-al-Panther-network-similarity.pptx">Slides_PPT</a>]
-[<a href="publications/KDD15-poster-Zhang-et-al-Panther-network-similarity.pdf">Poster</a>]
+[<a href="publications/KDD15-slides-Zhang-et-al-Panther-network-similarity.pdf">Poster</a>]
 [<a href="https://aminer.org/panther">Code&Data</a>]
 </LI>
 
@@ -268,8 +268,18 @@ Frontiers of Computer Science in China, 2008, Volume 2, Issue 1, pages 94-105.</
 	
 </ol>
 
-
 <h2>Research Experience</h2>
+<ul>
+<li><p>Visiting student in Department of Computer Science, University of Illinois at Urbana-Champaign, advised by Professor <a href="http://www.cs.uiuc.edu/~hanj/">Jiawei Han</a>. <i>Jan. 2014 - May 2014</i></p>
+</li>
+<li><p>Visiting student in Department of Computer Science and Engineering, Hong Kong University of Science and Technology, advised by Professor <a href="https://www.cse.ust.hk/~luo/">Qiong Luo</a>. <i>May 2008 - Jul. 2008</i></p>
+</li>
+<li><p>Research Intern in Information Analysis and Search Group, IBM CRL. <i>Apr. 2007 - Jan. 2008</i></p>
+</li>
+</ul>
+
+
+<h2>Academic Services</h2>
 <ul>
 <li><p>Reviewer: TKDE, TOIS, TKDD, DMKD.</p>
 </li>
