--- a/index.html
+++ b/index.html
@@ -272,7 +272,9 @@ Frontiers of Computer Science in China, 2008, Volume 2, Issue 1, pages 94-105.</
 <ul>
 <li><p>Visiting student in Department of Computer Science, University of Illinois at Urbana-Champaign, advised by Professor <a href="http://www.cs.uiuc.edu/~hanj/">Jiawei Han</a>. <i>Jan. 2014 - May 2014</i></p>
 </li>
-<li><p>Visiting student in Department of Computer Science and Engineering, Hong Kong University of Science and Technology, advised by Professor <a href="https://www.cse.ust.hk/~luo/">Qiong Luo</a>. <i>May 2008 - Jul. 2008</i></p>
+<li><p>Visiting student in Department of Computer Science and Engineering, Hong Kong University of Science and Technology, advised by Professor <a href="https://people.cs.kuleuven.be/~sien.moens/">Marie-Francine Moens</a>. <i>May 2015 - Jun. 2015</i></p>
+</li>
+<li><p>Visiting student in Department of Computer Science and Engineering, Belgium University, advised by Professor <a href="https://www.cse.ust.hk/~luo/">Qiong Luo</a>. <i>May 2008 - Jul. 2008</i></p>
 </li>
 <li><p>Research Intern in Information Analysis and Search Group, IBM CRL. <i>Apr. 2007 - Jan. 2008</i></p>
 </li>
