--- a/index.html
+++ b/index.html
@@ -30,14 +30,19 @@ My current researh interest falls in area of social network mining, graph mining
 <h2>Conference Publications </h2>
 <ol>
 
+<LI><b>Jing Zhang</b>, Bo Chen, Xianming Wang, Hong Chen, Cuiping Li, Fengmei Jin, Guojie Song and Yutao Zhang. MEgo2Vec: Embedding Matched Ego Networks for User Alignment Across Social Networks.
+In <a href="www.cikm2018.units.it">Proceedings of the International Conference on Information and Knowledge Management</a>
+(<a href="www.cikm2018.units.it">CIKM'18</a>). 
+</LI>
+	
 <LI><b>Jing Zhang</b>, Jie Tang, Yuanyi Zhong, Yuchen Mo, Juanzi Li, Guojie Song, Wendy Hall, and Jimeng Sun. StructInf: Mining Structural Influence from Social Streams.
 In <a href="http://www.aaai.org/Conferences/AAAI/aaai17.php">Proceedings of the 31st AAAI Conference on Artificial Intelligence</a>
 (<a href="http://www.aaai.org/Conferences/AAAI/aaai17.php">AAAI'17</a>). 
 [<a href="publications/AAAI17-Zhang-et-al-structural-influence.pdf">PDF</a>]
 [<a href="publications/AAAI17-poster-Zhang-et-al-structinf.pdf">Poster</a>]
 </LI>
-
-
+	
+	
 
 <LI>Xiaotao Gu, Hong Yang, Jie Tang, and <b>Jing Zhang</b>. Web User Profiling using Data Redundancy.
 In <a href="http://asonam.im.nuk.edu.tw/">Proceedings of the 2016 International Conference on Social Networks Analysis and Mining</a>
