--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ My current researh interest falls in area of social network mining, graph mining
 In <a href="www.cikm2018.units.it">Proceedings of the 33rd AAAI Conference on Artificial Intelligence</a>
 (<a href="https://aaai.org/Conferences/AAAI-19/">AAAI'17</a>). 
 [<a href="publications/AAAI19-Zhang-et-al-HRL.pdf">PDF</a>]
-[<a href="publications/AAAI19-ppt-Zhang-et-al-HRL.pdf">PPT</a>] 
+[<a href="publications/AAAI19-ppt-Zhang-et-al-HRL.ppt">PPT</a>] 
 </LI>
 	
 <LI><b>Jing Zhang</b>, Bo Chen, Xianming Wang, Hong Chen, Cuiping Li, Fengmei Jin, Guojie Song and Yutao Zhang. MEgo2Vec: Embedding Matched Ego Networks for User Alignment Across Social Networks.
