--- a/index.html
+++ b/index.html
@@ -33,14 +33,14 @@ My current researh interest falls in area of social network mining, graph mining
 In <a href="www.cikm2018.units.it">Proceedings of the 33rd AAAI Conference on Artificial Intelligence</a>
 (<a href="https://aaai.org/Conferences/AAAI-19/">AAAI'19</a>). 
 [<a href="publications/AAAI19-zhang-et-al-HRL.pdf">PDF</a>]
-[<a href="publications/AAAI19-ppt-zhang-et-al-HRL.ppt">PPT</a>] 
+[<a href="publications/AAAI19-ppt-zhang-et-al-HRL.pptx">PPT</a>] 
 </LI>
 	
 <LI><b>Jing Zhang</b>, Bo Chen, Xianming Wang, Hong Chen, Cuiping Li, Fengmei Jin, Guojie Song and Yutao Zhang. MEgo2Vec: Embedding Matched Ego Networks for User Alignment Across Social Networks.
 In <a href="www.cikm2018.units.it">Proceedings of the International Conference on Information and Knowledge Management</a>
 (<a href="www.cikm2018.units.it">CIKM'18</a>). 
 [<a href="publications/CIKM18-zhang-et-al-MEgo2Vec.pdf">PDF</a>]
-[<a href="publications/CIKM18-ppt-zhang-et-al-MEgo2Vec.ppt">PPT</a>]
+[<a href="publications/CIKM18-ppt-zhang-et-al-MEgo2Vec.pptx">PPT</a>]
 </LI>
 	
 <LI><b>Jing Zhang</b>, Jie Tang, Yuanyi Zhong, Yuchen Mo, Juanzi Li, Guojie Song, Wendy Hall, and Jimeng Sun. StructInf: Mining Structural Influence from Social Streams.
