--- a/index.html
+++ b/index.html
@@ -201,6 +201,18 @@ href="publications/Zhang-et-al-Expert-Finding.pdf">PDF</a>]</li>
 <h2>Journal Publications </h2>
 <ol>
 
+<LI>Yukuo Cen, <b>Jing Zhang</b>, Gaofei Wang, Yujie Qian, Chuizheng Meng, Zonghong Dai, Hongxia Yang, Jie Tang. 
+Trust Relationship Prediction in Alibaba E-Commerce Platform.
+<a href="http://www.computer.org/portal/web/tkde">
+IEEE Transaction on Knowledge and Data Engineering</a>
+(<a href="http://www.computer.org/portal/web/tkde">TKDE</a>)
+, 2019 (if =1.3) 
+[<a href="publications/TKDE19-Cen-et-al-Trust-Relationship-Prediction.pdf">PDF</a>]
+</li>	
+
+
+	
+	
 <LI><b>Jing Zhang</b>, Jie Tang, Cong Ma, Hanghang Tong, Yu Jing, Juanzi Li, Walter Luyten, and Marie-Francine Moens. 
 Fast and Flexible Top-k Similarity Search on Large Networks.
 <a href="https://tois.acm.org/">
