--- a/index.html
+++ b/index.html
@@ -24,8 +24,7 @@ Renmin University of China</p>
 <p>Prior to that, I received my Ph.D. degree from Computer Science Department, <a href="http://www.tsinghua.edu.cn/eng/">Tsinghua University</a> under supervision of Professor <a href="http://keg.cs.tsinghua.edu.cn/jietang/">Jie Tang</a> and Professor <a href="http://www.tsinghua.edu.cn/publish/csen/4623/2010/20101224174815852865998/20101224174815852865998_.html">Juanzi Li</a>. 
 
 <p>	
-My current researh interest falls in area of social network mining, graph mining, text mining, deep learning, machine learning.
-
+My current researh interest falls in area of social network and knowledge graph mining, especially social network and knowledge graph alignment, name disambiguation and recommendation
 
 <h2>Conference Publications </h2>
 <ol>
@@ -335,7 +334,7 @@ Frontiers of Computer Science in China, 2008, Volume 2, Issue 1, pages 94-105.</
 </ul>
 <div id="footer">
 <div id="footer-text">
-Last updated: 2018-11-15.
+Last updated: 2019-02-12.
 
 
 <!-- Start of StatCounter Code for Default Guide -->
