--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@ In <a href="www.cikm2018.units.it">Proceedings of the 33rd AAAI Conference on Ar
 (<a href="https://aaai.org/Conferences/AAAI-19/">AAAI'19</a>). 
 [<a href="publications/AAAI19-zhang-et-al-HRL.pdf">PDF</a>]
 [<a href="publications/AAAI19-ppt-zhang-et-al-HRL.pptx">PPT</a>] 
+[<a href="publications/AAAI19-poster-zhang-et-al-HRL.pptx">Poster</a>] 
 </LI>
 	
 <LI><b>Jing Zhang</b>, Bo Chen, Xianming Wang, Hong Chen, Cuiping Li, Fengmei Jin, Guojie Song and Yutao Zhang. MEgo2Vec: Embedding Matched Ego Networks for User Alignment Across Social Networks.
