--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ Renmin University of China</p>
 <p>Prior to that, I received my Ph.D. degree from Computer Science Department, <a href="http://www.tsinghua.edu.cn/eng/">Tsinghua University</a> under supervision of Professor <a href="http://keg.cs.tsinghua.edu.cn/jietang/">Jie Tang</a> and Professor <a href="http://www.tsinghua.edu.cn/publish/csen/4623/2010/20101224174815852865998/20101224174815852865998_.html">Juanzi Li</a>. 
 
 <p>	
-My current researh interest falls in area of social network and knowledge graph mining, especially social network and knowledge graph alignment, name disambiguation and recommendation
+My current researh interest falls in area of social network and knowledge graph mining, especially social network alignment, knowledge graph alignment, name disambiguation and recommendation
 
 <h2>Conference Publications </h2>
 <ol>
@@ -310,7 +310,7 @@ Frontiers of Computer Science in China, 2008, Volume 2, Issue 1, pages 94-105.</
 <ul>
 <li><p>Reviewer: TKDE, TOIS, TKDD, DMKD.</p>
 </li>
-<li><p>PC member:ICDM2014,ASONAM2014,ICWSM2015,IJCAI2016,ASONAM2016,ICWSM2016,CIKM2016</p>
+<li><p>PC member:SIGKDD2019,IJCAI2016,ASONAM2016,ICWSM2016,CIKM2016,ICWSM2015,ICDM2014,ASONAM2014</p>
 </li>
 </ul>
 
