--- a/index.html
+++ b/index.html
@@ -23,11 +23,46 @@ Renmin University of China</p>
 <p>I am now an assistant professor at <a href="http://info.ruc.edu.cn/">Computer Science Department</a>, <a href="http://www.ruc.edu.cn/">Renmin University of China</a>. 
 <p>Prior to that, I received my Ph.D. degree from Computer Science Department, <a href="http://www.tsinghua.edu.cn/eng/">Tsinghua University</a> under supervision of Professor <a href="http://keg.cs.tsinghua.edu.cn/jietang/">Jie Tang</a> and Professor <a href="http://www.tsinghua.edu.cn/publish/csen/4623/2010/20101224174815852865998/20101224174815852865998_.html">Juanzi Li</a>. 
 
+
+	
 <p>	
 My current researh interest falls in area of social network and knowledge graph mining, especially social network alignment, knowledge graph alignment, name disambiguation and recommendation
+<p>
+<p><font color="red"> I am looking for <u> highly-motivated </u> students to work with me. </font> If interested, please drop me a message by email. </p>	
 
 <h2>Conference Publications </h2>
 <ol>
+	
+<LI>Jiezhong Qiu, Qibin Chen, Yuxiao Dong, <b>Jing Zhang</b>, Hongxia Yang, Ming Ding, Kuansan Wang, and Jie Tang. Graph Contrastive Coding for Structural Graph Representation Pre-Training.
+In <a href="http://kdd.org/kdd2020/"><i>Proceedings of the Twenty-Sixth ACM SIGKDD International Conference on Knowledge Discovery and Data Mining</i></a>
+(<a href="http://kdd.org/kdd2020/">KDD'20</a>).
+</LI>	
+	
+<LI>Xiaobin Tang, <b>Jing Zhang</b>, Bo Chen, Yang Yang, Hong Chen, Cuiping Li. BERT-INT: A BERT-based Interaction Model For Knowledge Graph Alignment.
+In <a href="https://ijcai20.org/">Proceedings of the 29th International Joint Conference on Artificial Intelligence</a> 
+(<a href="https://ijcai20.org/">IJCAI'20</a>).
+[<a href="publications/IJCAI20-Tang-et-al-BERT-INT.pdf">PDF</a>]
+</LI>
+	
+<LI>Bo Chen, <b>Jing Zhang</b>, Xiaobin Tang, Hong Chen, Cuiping Li. JarKA: Modeling Attribute Interactions for Cross-lingual Knowledge Alignment.
+In <a href="https://pakdd2020.org/">the 24th Pacific-Asia Conference on Knowledge Discovery and Data Mining</a>
+(<a href="https://pakdd2020.org/">PAKDD'20</a>). 
+[<a href="publications/PAKDD20-CHEN-et-al-JARKA.pdf">PDF</a>]
+[<a href="publications/PAKDD20-CHEN-et-al-JARKA.pptx">PPT</a>] 
+</LI>
+	
+<LI>Bowen Hao, <b>Jing Zhang</b>, Cuiping Li, Hong Chen. Few-Shot Representation Learning for Cold-Start Users and Items.
+In <a href="http://www.tjudb.cn/apwebwaim2020/node/2">the 4th APWeb-WAIM International Joint Conference on Web and Big Data</a>
+(<a href="http://www.tjudb.cn/apwebwaim2020/node/2">APWEB'20</a>). 
+[<a href="publications/IJCAI20-Tang-et-al-BERT-INT.pdf">PDF</a>]
+</LI>
+
+<LI>Yanling Wang, Cuiping Li, <b>Jing Zhang</b>, Peng Ni, Hong Chen. Graph Convolutional Network using a Reliability-based Feature Aggregation Mechanism.
+In <a href="http://db.pknu.ac.kr/dasfaa2020/">the 5th International Conference on Database Systems for Advanced Applications</a>
+(<a href="http://db.pknu.ac.kr/dasfaa2020/">DASFAA'20</a>). 
+[<a href="publications/DASFAA20-WANG-et-al-GCN.pdf">PDF</a>]
+</LI>
+	
 <LI><b>Jing Zhang</b>, Bowen Hao, Bo Chen, Cuiping Li, Hong Chen, Jimeng Sun. Hierarchical Reinforcement Learning for Course Recommendation in MOOCs.
 In <a href="www.cikm2018.units.it">Proceedings of the 33rd AAAI Conference on Artificial Intelligence</a>
 (<a href="https://aaai.org/Conferences/AAAI-19/">AAAI'19</a>). 
