--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@ In <a href="http://kdd.org/kdd2020/"><i>Proceedings of the Twenty-Sixth ACM SIGK
 In <a href="https://ijcai20.org/">Proceedings of the 29th International Joint Conference on Artificial Intelligence</a> 
 (<a href="https://ijcai20.org/">IJCAI'20</a>).
 [<a href="publications/IJCAI20-Tang-et-al-BERT-INT.pdf">PDF</a>]
+[<a href="https://github.com/kosugi11037/bert-int">Data&Code</a>]
 </LI>
 	
 <LI>Bo Chen, <b>Jing Zhang</b>, Xiaobin Tang, Hong Chen, Cuiping Li. JarKA: Modeling Attribute Interactions for Cross-lingual Knowledge Alignment.
@@ -49,6 +50,7 @@ In <a href="https://pakdd2020.org/">the 24th Pacific-Asia Conference on Knowledg
 (<a href="https://pakdd2020.org/">PAKDD'20</a>). 
 [<a href="publications/PAKDD20-CHEN-et-al-JARKA.pdf">PDF</a>]
 [<a href="publications/PAKDD20-CHEN-et-al-JARKA.pptx">PPT</a>] 
+[<a href="https://github.com/BoChen-Daniel/PAKDD-20-JarKA">Data&Code</a>]
 </LI>
 	
 <LI>Bowen Hao, <b>Jing Zhang</b>, Cuiping Li, Hong Chen. Few-Shot Representation Learning for Cold-Start Users and Items.
