--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 <div id="layout-content">
 <table class="imgtable"><tbody><tr><td>
-<img src="./JingZHANG_files/zj.png" alt="" width="200px" height="238px">&nbsp;</td>
+<img src="./JingZHANG_files/zj.jpg" alt="" width="200px" height="238px">&nbsp;</td>
 <td align="left">
 <h1>Jing ZHANG</h1>
 <p>Assistant Professor</p>
@@ -28,7 +28,7 @@ Renmin University of China</p>
 <p>	
 My current researh interest falls in area of social network and knowledge graph mining, especially social network alignment, knowledge graph alignment, name disambiguation and recommendation
 <p>
-<p><font color="red"> I am looking for <u> highly-motivated </u> students to work with me. </font> If interested, please drop me a message by email. </p>	
+<p><font color="red"> I am looking for highly-motivated students to work with me. </font> If interested, please drop me a message by email. </p>	
 
 <h2>Conference Publications </h2>
 <ol>
