--- a/index.html
+++ b/index.html
@@ -345,9 +345,9 @@ Frontiers of Computer Science in China, 2008, Volume 2, Issue 1, pages 94-105.</
 
 <h2>Academic Services</h2>
 <ul>
-<li><p>Reviewer: TKDE, TOIS, TKDD, DMKD.</p>
+<li><p>Reviewer: TKDE, TOIS, TKDD, DMKD, 中国科学</p>
 </li>
-<li><p>PC member:SIGKDD2019,IJCAI2016,ASONAM2016,ICWSM2016,CIKM2016,ICWSM2015,ICDM2014,ASONAM2014</p>
+<li><p>PC member:SIGKDD2020, WWW2020, SIGKDD2019,IJCAI2016,ASONAM2016,ICWSM2016,CIKM2016,ICWSM2015,ICDM2014,ASONAM2014</p>
 </li>
 </ul>
 
@@ -355,6 +355,8 @@ Frontiers of Computer Science in China, 2008, Volume 2, Issue 1, pages 94-105.</
 
 <h2>Honors &amp; Awards</h2>
 <ul>
+<li><p>Outstanding Worker of Information School, RUC, 2019</p>
+</li>
 <li><p>Excellent Graduate of Beijing City with Ph.D. degree, 2016</p>
 </li>
 <li><p>National Scholarship, 2015</p>
