--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ Renmin University of China</p>
 
 	
 <p>	
-My current researh interest falls in area of social network and knowledge graph mining, especially social network alignment, knowledge graph alignment, name disambiguation and recommendation
+My current researh interest falls in area of social network and knowledge graph mining, especially social network alignment, knowledge graph alignment, entity linking, knowledge graph reasoning, name disambiguation and recommendation
 <p>
 <p><font color="red"> I am looking for highly-motivated students to work with me. </font> If interested, please drop me a message by email. </p>	
 
