--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ Renmin University of China</p>
 
 	
 <p>	
-My current researh interest falls in area of knowledge graph acquisition and reasoning, and applications such as recommendation and question answering on knowledge grpahs.
+My current researh interest falls in area of knowledge graph acquisition and reasoning, and recommendation and question answering on knowledge graphs.
 <p>
 <p><font color="red"> I am looking for highly-motivated students to work with me. </font> If interested, please drop me a message by email. </p>	
 
