--- a/index.html
+++ b/index.html
@@ -22,12 +22,12 @@ Renmin University of China</p>
 <h2>Short Bio</h2>
 <p>I am now an assistant professor at <a href="http://info.ruc.edu.cn/">Computer Science Department</a>, <a href="http://www.ruc.edu.cn/">Renmin University of China</a>. 
 <p>Prior to that, I received my Ph.D. degree from Computer Science Department, <a href="http://www.tsinghua.edu.cn/eng/">Tsinghua University</a> under supervision of Professor <a href="http://keg.cs.tsinghua.edu.cn/jietang/">Jie Tang</a> and Professor <a href="http://www.tsinghua.edu.cn/publish/csen/4623/2010/20101224174815852865998/20101224174815852865998_.html">Juanzi Li</a>. 
-
-
 	
 <p>	
 My current researh interest falls in area of knowledge graph acquisition and reasoning, and recommendation and question answering on knowledge graphs.
+My google scholar citation number is more than <a href="https://scholar.google.com/citations?user=T7Wa3GQAAAAJ&hl=en">3300</a> now.
 <p>
+
 <p><font color="red"> I am looking for highly-motivated students to work with me. </font> If interested, please drop me a message by email. </p>	
 
 <h2>Conference Publications </h2>
