--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ Renmin University of China</p>
 <p>Prior to that, I received my Ph.D. degree from Computer Science Department, <a href="http://www.tsinghua.edu.cn/eng/">Tsinghua University</a> under supervision of Professor <a href="http://keg.cs.tsinghua.edu.cn/jietang/">Jie Tang</a> and Professor <a href="http://www.tsinghua.edu.cn/publish/csen/4623/2010/20101224174815852865998/20101224174815852865998_.html">Juanzi Li</a>. 
 	
 <p>	
-My current researh interest falls in area of knowledge graph acquisition and reasoning, and recommendation and question answering on knowledge graphs.
+My current research interest falls in area of knowledge graph acquisition and reasoning, and recommendation and question answering on knowledge graphs.
 My google scholar citation number is more than <a href="https://scholar.google.com/citations?user=T7Wa3GQAAAAJ&hl=en">3300</a> now.
 <p>
 
