--- a/index.html
+++ b/index.html
@@ -32,6 +32,11 @@ My google scholar citation number is more than <a href="https://scholar.google.c
 
 <h2>Conference Publications </h2>
 <ol>
+
+<LI>Bowen Hao, <b>Jing Zhang</b>, Cuiping Li, Hong Chen, and Hongzhi Yin. Graph Contrastive Coding for Structural Graph Representation Pre-Training.
+In <a href="https://ecmlpkdd2020.net/"><i>Proceedings of European Conference on Machine Learning and Principles and Practice of Knowledge Discovery in Databases</i></a>
+(<a href="https://ecmlpkdd2020.net/">ECML-PKDD'20</a>).
+</LI>	
 	
 <LI>Jiezhong Qiu, Qibin Chen, Yuxiao Dong, <b>Jing Zhang</b>, Hongxia Yang, Ming Ding, Kuansan Wang, and Jie Tang. Graph Contrastive Coding for Structural Graph Representation Pre-Training.
 In <a href="http://kdd.org/kdd2020/"><i>Proceedings of the Twenty-Sixth ACM SIGKDD International Conference on Knowledge Discovery and Data Mining</i></a>
