--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <img src="./JingZHANG_files/zj_hp.png" alt="" width="200px">&nbsp;</td>
 <td align="left">
 <h1>Jing ZHANG</h1>
-<p>Assistant Professor</p>
+<p>Associate Professor</p>
 Department of Computer Science and Technology<br>
 Information School<bar>
 Renmin University of China</p>
