--- a/index.html
+++ b/index.html
@@ -33,8 +33,7 @@ My google scholar citation number is more than <a href="https://scholar.google.c
 <h2>Conference Publications </h2>
 <ol>
 
-<LI>Bowen Hao, <b>Jing Zhang</b>, Cuiping Li, Hong Chen, and Hongzhi Yin. Recommending Courses in MOOCs for Jobs: An
-Auto Weak Supervision Approach.
+<LI>Bowen Hao, <b>Jing Zhang</b>, Cuiping Li, Hong Chen, and Hongzhi Yin. Recommending Courses in MOOCs for Jobs: An Auto Weak Supervision Approach.
 In <a href="https://ecmlpkdd2020.net/"><i>Proceedings of European Conference on Machine Learning and Principles and Practice of Knowledge Discovery in Databases</i></a>
 (<a href="https://ecmlpkdd2020.net/">ECML-PKDD'20</a>).
 </LI>	
