--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ Renmin University of China</p>
 <p>Address: Room 427, Information Building, Renmin University of China, Beijing</p>
 </td></tr></tbody></table>
 <h2>Short Bio</h2>
-<p>I am now an assistant professor at <a href="http://info.ruc.edu.cn/">Computer Science Department</a>, <a href="http://www.ruc.edu.cn/">Renmin University of China</a>. 
+<p>I am now an associate professor at <a href="http://info.ruc.edu.cn/">Computer Science Department</a>, <a href="http://www.ruc.edu.cn/">Renmin University of China</a>. 
 <p>Prior to that, I received my Ph.D. degree from Computer Science Department, <a href="http://www.tsinghua.edu.cn/eng/">Tsinghua University</a> under supervision of Professor <a href="http://keg.cs.tsinghua.edu.cn/jietang/">Jie Tang</a> and Professor <a href="http://www.tsinghua.edu.cn/publish/csen/4623/2010/20101224174815852865998/20101224174815852865998_.html">Juanzi Li</a>. 
 	
 <p>	
