--- a/index.html
+++ b/index.html
@@ -30,9 +30,17 @@ My google scholar citation number is more than <a href="https://scholar.google.c
 
 <p><font color="red"> I am looking for highly-motivated students to work with me. </font> If interested, please drop me a message by email. </p>	
 
-<h2>Conference Publications </h2>
+<h2>Arxiv Publications</h2>
 <ol>
 
+<LI><b>Jing Zhang</b>, Bo Chen, Lingxi Zhang, Xirui Ke and Haipeng Ding. Neural-Symbolic Reasoning on Knowledge Graphs.
+(<a href="https://arxiv.org/abs/2010.05446">https://arxiv.org/abs/2010.05446</a>).
+</LI>	
+</ol>
+	
+<h2>Conference Publications </h2>
+<ol>
+	
 <LI>Bowen Hao, <b>Jing Zhang</b>, Cuiping Li, Hong Chen, and Hongzhi Yin. Recommending Courses in MOOCs for Jobs: An Auto Weak Supervision Approach.
 In <a href="https://ecmlpkdd2020.net/"><i>Proceedings of European Conference on Machine Learning and Principles and Practice of Knowledge Discovery in Databases</i></a>
 (<a href="https://ecmlpkdd2020.net/">ECML-PKDD'20</a>).
@@ -243,6 +251,16 @@ href="publications/Zhang-et-al-Expert-Finding.pdf">PDF</a>]</li>
 <h2>Journal Publications </h2>
 <ol>
 
+<LI>Bo Chen, <b>Jing Zhang</b>, Jie Tang, Lingfan Cai, Zhaoyu Wang, Shu Zhao, Hong Chen, and Cuiping Li.
+CONNA: Addressing Name Disambiguation on The Fly.
+<a href="http://www.computer.org/portal/web/tkde">
+IEEE Transaction on Knowledge and Data Engineering</a>
+(<a href="http://www.computer.org/portal/web/tkde">TKDE</a>)
+, 2020 (if =1.3) 
+[<a href="publications/TKDE19-Chen-et-al-CONNA">PDF</a>]
+</li>
+	
+	
 <LI>Yukuo Cen, <b>Jing Zhang</b>, Gaofei Wang, Yujie Qian, Chuizheng Meng, Zonghong Dai, Hongxia Yang, Jie Tang. 
 Trust Relationship Prediction in Alibaba E-Commerce Platform.
 <a href="http://www.computer.org/portal/web/tkde">
