--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ In <a href="https://ecmlpkdd2020.net/"><i>Proceedings of European Conference on 
 (<a href="https://ecmlpkdd2020.net/">ECML-PKDD'20</a>).
 </LI>	
 	
-<LI>Jiezhong Qiu, Qibin Chen, Yuxiao Dong, <b>Jing Zhang</b>, Hongxia Yang, Ming Ding, Kuansan Wang, and Jie Tang. Graph Contrastive Coding for Structural Graph Representation Pre-Training.
+<LI>Jiezhong Qiu, Qibin Chen, Yuxiao Dong, <b>Jing Zhang</b>, Hongxia Yang, Ming Ding, Kuansan Wang, and Jie Tang. GCC: Graph Contrastive Coding for Graph Neural Network Pre-Training.
 In <a href="http://kdd.org/kdd2020/"><i>Proceedings of the Twenty-Sixth ACM SIGKDD International Conference on Knowledge Discovery and Data Mining</i></a>
 (<a href="http://kdd.org/kdd2020/">KDD'20</a>).
 </LI>	
