--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@ CONNA: Addressing Name Disambiguation on The Fly.
 IEEE Transaction on Knowledge and Data Engineering</a>
 (<a href="http://www.computer.org/portal/web/tkde">TKDE</a>)
 , 2020 (if =1.3) 
-[<a href="publications/TKDE19-Chen-et-al-CONNA">PDF</a>]
+[<a href="publications/TKDE19-Chen-et-al-CONNA.pdf">PDF</a>]
 </li>
 	
 	
