--- a/index.html
+++ b/index.html
@@ -30,11 +30,11 @@ My google scholar citation number is more than <a href="https://scholar.google.c
 
 <p><font color="red"> I am looking for highly-motivated students to work with me. </font> If interested, please drop me a message by email. </p>	
 
-<h2>Arxiv Publications</h2>
+<h2>Preprint</h2>
 <ol>
 
 <LI><b>Jing Zhang</b>, Bo Chen, Lingxi Zhang, Xirui Ke and Haipeng Ding. Neural-Symbolic Reasoning on Knowledge Graphs.
-(<a href="https://arxiv.org/abs/2010.05446">https://arxiv.org/abs/2010.05446</a>).
+(<a href="https://arxiv.org/abs/2010.05446">[arxiv]</a>).
 </LI>	
 </ol>
 	
