--- a/index.html
+++ b/index.html
@@ -38,18 +38,18 @@ My google scholar citation number is more than <a href="https://scholar.google.c
 </LI>	
 </ol>
 	
-<h2>Conference Publications </h2>
+<h2>Conference Publications</h2>
 <ol>
 
 <LI>Bowen Hao, <b>Jing Zhang</b>, Hongzhi Yin, Cuiping Li, and Hong Chen. Pre-Training Graph Neural Networks for Cold-Start Users and Items Representation.
 In <a href="https://ecmlpkdd2020.net/"><i>Proceedings of International Conference on Web Search and Data Mining(<a href="https://www.wsdm-conference.org/2021/">WSDB'21</a>).
-[<a href="publications/WSDM21-Hao-et-al-Pretrain-Recsys.pdf">PDF</a>]
+[<a href="https://arxiv.org/pdf/2012.07064.pdf">PDF</a>]
 </LI>	
 	
 <LI>Bowen Hao, <b>Jing Zhang</b>, Cuiping Li, Hong Chen, and Hongzhi Yin. Recommending Courses in MOOCs for Jobs: An Auto Weak Supervision Approach.
 In <a href="https://ecmlpkdd2020.net/"><i>Proceedings of European Conference on Machine Learning and Principles and Practice of Knowledge Discovery in Databases</i></a>
 (<a href="https://ecmlpkdd2020.net/">ECML-PKDD'20</a>).
-[<a href="publications/PKDD2020-Hao-et-al-AutoWeakSuper.pdf">PDF</a>]
+[<a href="https://arxiv.org/pdf/2012.14234.pdf">PDF</a>]
 </LI>	
 	
 <LI>Jiezhong Qiu, Qibin Chen, Yuxiao Dong, <b>Jing Zhang</b>, Hongxia Yang, Ming Ding, Kuansan Wang, and Jie Tang. GCC: Graph Contrastive Coding for Graph Neural Network Pre-Training.
